--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,28 @@
+<div class="navbar-wagon">
+  <!-- Logo -->
+  <a href="/" class="navbar-wagon-brand">
+      <%= image_tag("proletar.png")  %>
+  </a>
+  <a href="" class="navbar-wagon-item navbar-wagon-link"><strong>Find Help</strong></a>
+  <a href="" class="navbar-wagon-item navbar-wagon-link"><strong>Lend Help</strong></a>
+  <!-- Right Navigation -->
+  <div class="navbar-wagon-right hidden-xs hidden-sm">
+    <a href="" class="navbar-wagon-item navbar-wagon-link">Sign in</a>
+    <!-- Profile picture with dropdown list -->
+    <div class="navbar-wagon-item">
+    </div>
+  </div>
+  <!-- Dropdown appearing on mobile only -->
+  <div class="navbar-wagon-item hidden-md hidden-lg">
+    <div class="dropdown">
+      <i class="fas fa-bars dropdown-toggle" data-toggle="dropdown" role="button"></i>
+      <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
+        <li><a href="#">Host</a></li>
+        <li><a href="#">Trips</a></li>
+        <li><a href="#">Messagese</a></li>
+      </ul>
+    </div>
+  </div>
+</div>
 <h1>Pages#home</h1>
 <p>Find me in app/views/pages/home.html.erb</p>
