--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,10 +1,12 @@
 <div class="navbar-wagon">
   <!-- Logo -->
-  <a href="/" class="navbar-wagon-brand">
+  <div>
+    <a href="/" class="navbar-wagon-brand">
       <%= image_tag("proletar.png")  %>
   </a>
-  <a href="" class="navbar-wagon-item navbar-wagon-link"><strong>Find Help</strong></a>
-  <a href="" class="navbar-wagon-item navbar-wagon-link"><strong>Lend Help</strong></a>
+    <a href="" class="navbar-wagon-item navbar-wagon-link"><strong>Find Help</strong></a>
+    <a href="" class="navbar-wagon-item navbar-wagon-link"><strong>Lend Help</strong></a>
+  </div>
   <!-- Right Navigation -->
   <div class="navbar-wagon-right hidden-xs hidden-sm">
     <a href="" class="navbar-wagon-item navbar-wagon-link">Sign in</a>
