--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -10,7 +10,7 @@
   <!-- Right Navigation -->
   <div class="navbar-wagon-right hidden-xs hidden-sm">
     <a href="" class="navbar-wagon-item navbar-wagon-link">Sign in</a>
-    <!-- Profile picture with dropdown list -->
+    <!-- Profile photo with dropdown list -->
     <div class="navbar-wagon-item">
     </div>
   </div>
