Added a booking form

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,19 +2,13 @@
   <h3 class="large_topmargin">You are here to find help</h3>
   <h1 class="reduce_lineheight">We're here</h1>
   <h1 class="reduce_lineheight">to help</h1>
-
+</div>
 <div class="large_topmargin">
   <%= render 'shared/searchform' %>
 </div>
-
 <div class="large_topmargin">
   <p>Browse categories</p>
 </div>
-
 <div class="placeholder text-center">
   <p>Add category cards here</p>
 </div>
-
-
-
-
