--- a/app/assets/stylesheets/components/_bookingform.scss
+++ b/app/assets/stylesheets/components/_bookingform.scss
@@ -1,13 +1,13 @@
-.form_group {
+.booking_form_group {
   font-family: "Raleway", "Helvetica", "sans-serif";
   padding: 20px;
-  display: flex;
   width: 650px;
   justify-content: space-around;
   align-items: center;
   background-color: #f5f5f5;
 
-  .form_input {
+  .booking_form_input {
+    padding: 30px;
     padding-left: 10px;
   }
 }
