--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -1,2 +1,6 @@
-<h1>Bookings#new</h1>
-<p>Find me in app/views/bookings/new.html.erb</p>
+<div class="overall_container">
+  <h1>Secure checkout</h1>
+  <p>Find me in app/views/bookings/new.html.erb</p>
+  <h3>Add a Booking</h3>
+  <%= render 'shared/bookingform' %>
+</div>
