created show page

--- a/app/assets/stylesheets/pages/_jobs.scss
+++ b/app/assets/stylesheets/pages/_jobs.scss
@@ -2,8 +2,55 @@
   display: flex;
   flex-direction: row;
 }
-
+.form_group {
+   margin-left: 211px;
+}
 .cards_container {
   margin-top: 30px;
   padding: 20px;
+}
+
+.jobs_container {
+  display: flex;
+  flex-direction: row;
+}
+
+.image {
+  padding-left: 250px;
+
+}
+
+.job-desc {
+  padding-left: 30px;
+}
+
+
+.book_button{
+  padding-top: 10px;
+  padding-left: 800px;
+  padding-right: 20px;
+}
+.btn-primary {
+ padding: 10px 20px;
+}
+
+.btn-medium {
+  color: #2381D0;
+  border: 1px solid $blue;
+  padding: 10px 15px;
+  border-radius: 4px;
+  opacity: 0.6;
+}
+.btn-medium:hover {
+  opacity: 1;
+  text-decoration: none;
+  color: #2381D0;
+}
+
+
+.btn_container {
+  display: flex;
+}
+.msg_button {
+  padding-top: 10px;
 }
