--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -1,5 +1,5 @@
 <div class="overall_container">
   <h2>Secure checkout</h2>
   <h3>Add a Booking</h3>
-  <%= render 'shared/bookingform' %>
+  <%= render 'bookings/bookingform' %>
 </div>
