--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -6,17 +6,22 @@
   height: 180px;
   padding: 10px;
   .card_description {
+    margin-left: 10px;
+    margin-right: 10px;
     margin-top: 10px;
-    h4 {
-      font-size: 20px;
-    }
-    h5 {
-      font-size: 13px;
-      color: #888888;
-    }
-    p {
-      margin-top: 20px;
-      font-size: 14px;
-    }
+  }
+  h4 {
+    font-size: 20px;
+  }
+  h5 {
+    font-size: 13px;
+    color: #888888;
+  }
+  p {
+    margin-top: 20px;
+    font-size: 14px;
+  }
+  .card_rating {
+    width: 100px;
   }
 }
