--- a/app/views/bookings/_bookingform.html.erb
+++ b/app/views/bookings/_bookingform.html.erb
@@ -1,17 +1,5 @@
-<div class="booking_form_group">
-  <div class="booking_form_input">
-    <%= form_tag(booking_path method: :get) do %>
-    1. Choose date
-    <%= text_field_tag :date %>
-    <% end %>
-  </div>
-  <div class="booking_form_input">
-    <%= form_tag(booking_path method: :post) do %>
-    2. Questions or concerns
-    <%= text_area_tag :message, nil, size: "63x7" %>
-  </div>
-  <div class="booking_form_input">
-    <%= submit_tag 'Book', class: "btn btn-primary" %>
-    <% end %>
-  </div>
-</div>
+<%= simple_form_for([@job, @booking]) do |f| %>
+<%= f.input :date %>
+<%= f.input :message %>
+<%= f.button :submit %>
+<% end %>
