updated index page and search function

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -3,12 +3,11 @@
   display: flex;
   flex-direction: row;
   margin: 20px;
-  height: 180px;
+  height: 200px;
   padding: 10px;
   .card_description {
     margin-left: 10px;
     margin-right: 10px;
-    margin-top: 10px;
   }
   h4 {
     font-size: 20px;
@@ -23,5 +22,15 @@
   }
   .card_rating {
     width: 100px;
+    padding: 10px;
+    border-left: 2px solid #F5F5F5;
   }
+}
+
+.category_cards_container {
+  padding: 20px;
+}
+
+.category_card {
+  margin: 10px;
 }
