--- a/app/assets/stylesheets/components/_searchform.scss
+++ b/app/assets/stylesheets/components/_searchform.scss
@@ -1,12 +1,11 @@
-.form_group {
+.form {
   font-family: "Raleway", "Helvetica", "sans-serif";
   padding: 20px;
   display: flex;
-  width: 650px;
+  width: 450px;
   justify-content: space-around;
   align-items: center;
   background-color: #f5f5f5;
-
   .form_input {
     padding-left: 10px;
   }
