--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -9,7 +9,7 @@
         <%= render 'shared/searchform' %>
       </div>
       <div class="cards_container background_grey">
-        <h3 class="remove_topmargin"><%= Job.count %> job listings</h3>
+        <h4 class="remove_topmargin"><%= @jobs.count %> job listing</h4>
         <% @jobs.each do |job| %>
           <div class="row">
             <div class="col-xs-12">
@@ -19,16 +19,18 @@
                 </div>
                 <div class="card_description">
                   <h4><%= link_to job.name, job_path(job) %></h4>
+                  <p><%= job.location %></p>
                   <h5><%= job.user.email %></h5>
                   <p><%= job.description %></p>
                 </div>
                 <div class="card_rating">
+                  <p>$<%= job.price %>/hour</p>
                   <p><%= job.bookings.count %> booking completed</p>
                   <% ratings = 0 %>
                   <% job.bookings.each do |booking| %>
                   <% ratings += booking.rating %>
                   <% avg_rating = (ratings / job.bookings.count) %>
-                  <p>rating: <%= avg_rating %></p>
+                  <p>Rating: <%= avg_rating %></p>
                   <% end %>
                 </div>
               </div>
