--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,13 +2,24 @@
   <h3 class="large_topmargin">You are here to find help</h3>
   <h1 class="reduce_lineheight">We're here</h1>
   <h1 class="reduce_lineheight">to help</h1>
-</div>
-<div class="large_topmargin">
-  <%= render 'shared/searchform' %>
-</div>
-<div class="large_topmargin">
-  <p>Browse categories</p>
-</div>
-<div class="placeholder text-center">
-  <p>Add category cards here</p>
+
+  <div class="large_topmargin">
+    <%= render 'shared/searchform' %>
+  </div>
+  <div class="large_topmargin">
+    <p>Browse categories</p>
+  </div>
+  <div class="category_cards_container background_grey">
+    <div class="row">
+      <% Category.all.each do |category| %>
+        <div class="col-md-4">
+          <div class="category_card">
+            <p><%= category.name %></p>
+            <%= image_tag category.photo, width: 250, height: 150 %>
+          </div>
+        </div>
+      <% end %>
+    </div>
+  </div>
+
 </div>
