--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -7,7 +7,7 @@
     <%= render 'shared/searchform' %>
   </div>
   <div class="large_topmargin">
-    <p>Browse categories</p>
+    <h5>Browse categories</h5>
   </div>
   <div class="category_cards_container background_grey">
     <div class="row">
