--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -1,3 +1,9 @@
-<p>Recommended jobs</p>
-<p><strong>Rate</strong></p>
-<p><strong>Location</strong></p>
+<p>Recommended jobs:</p>
+<br>
+<p><strong>Categories</strong></p>
+<% Category.all.each do |category| %>
+<ul>
+  <li><%= category.name %> (<%= category.jobs.count %>)</li>
+</ul>
+<% end %>
+
