edited some styles

--- a/app/assets/stylesheets/components/_searchform.scss
+++ b/app/assets/stylesheets/components/_searchform.scss
@@ -1,5 +1,5 @@
 .form {
-  font-family: "Raleway", "Helvetica", "sans-serif";
+  font-family: "Lato", "sans-serif";
   padding: 20px;
   display: flex;
   width: 450px;
