--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -27,10 +27,16 @@
   }
 }
 
+.category_cards_wrapper {
+  border-top: 1px dotted black;
+  padding-top: 50px;
+}
+
 .category_cards_container {
   padding: 20px;
 }
 
 .category_card {
   margin: 10px;
+  font-size: 14px;
 }
