--- a/app/assets/stylesheets/layouts/overall_style.scss
+++ b/app/assets/stylesheets/layouts/overall_style.scss
@@ -19,6 +19,10 @@
   margin-top: 50px;
 }
 
+.extra_large_topmargin {
+  margin-top: 70px;
+}
+
 .placeholder {
   width: 90%;
   border: 3px solid #f5f5f5;
