--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -9,7 +9,7 @@
         <%= render 'shared/searchform' %>
       </div>
       <div class="cards_container background_grey">
-        <h4 class="remove_topmargin"><%= @jobs.count %> job listing</h4>
+        <h5 class="remove_topmargin"><strong><%= @jobs.count %> job listing</strong></h5>
         <% @jobs.each do |job| %>
           <div class="row">
             <div class="col-xs-12">
@@ -24,7 +24,7 @@
                   <p><%= job.description %></p>
                 </div>
                 <div class="card_rating">
-                  <p>$<%= job.price %>/hour</p>
+                  <p><strong>$<%= job.price %>/hour</strong></p>
                   <p><%= job.bookings.count %> booking completed</p>
                   <% ratings = 0 %>
                   <% job.bookings.each do |booking| %>
