changed job show pics and font on home screen

--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -14,7 +14,7 @@
         </div>
       </div>
       <div class="col-xs-6">
-        <div><img src="/assets/job-325923df366efc24eeb84f5103f9b23fc9a4dc37e9a987fcdbe4eb091f35652f.png" height="300" class="image"></div>
+        <div><%= image_tag "#{@job.photo}", height: 300, crop: :fill %></div>
         </div>
       </div>
     </div>
@@ -27,3 +27,4 @@
       </div>
     </div>
   </div>
+
