--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -1,9 +1,9 @@
 // Import Google fonts
-@import url("https://fonts.googleapis.com/css?family=Lato|Noto+Sans+SC");
+@import url("https://fonts.googleapis.com/css?family=Lato|Noto+Sans+SC|Poppins");
 
 // Define fonts for body and headers
 $body-font: 'Noto Sans SC', sans-serif;
-$headers-font: 'Lato', sans-serif;
+$headers-font: 'Poppins', sans-serif;
 
 // To use a font file (.woff) uncomment following lines
 // @font-face {
