finished styling edits

--- a/app/assets/stylesheets/components/_bookingform.scss
+++ b/app/assets/stylesheets/components/_bookingform.scss
@@ -13,8 +13,11 @@
 }
 
 #new_booking {
+  margin-left: 30px;
+  font-size: 14px;
   .mx-1 {
     display: inline-block;
     width: 150px;
+    font-size: 14px;
   }
 }
