--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -1,11 +1,17 @@
-<div>
-  <h1><strong>Thank you, that's all!</strong></h1>
-  <p>You have successfully confirmed getting help with</p>
-  <p>
-    <%= @booking.job.user.email %>
-  </p>
-  <p>
-    on
-    <%= @booking.date %>
-  </p>
+<div class="overall_container">
+  <div class="large_topmargin">
+    <h1><strong>Thank you, that's all!</strong></h1>
+  </div>
+  <div class="large_topmargin">
+    <p>You have successfully confirmed getting help with</p>
+  <div class="blue_font">
+    <p>
+      <%= @booking.job.user.email %>
+    </p>
+  </div>
+    <p>
+      on
+      <%= @booking.date %>
+    </p>
+  </div>
 </div>
