--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -2,7 +2,8 @@
   <div class="job_content">
     <div class="row">
       <div class="col-xs-6">
-        <div class="job-desc"> <h3><%= "#{@job.name}"%></h3>
+        <div class="job-desc">
+          <h3><%= "#{@job.name}"%></h3>
         </div>
         <div class="card" style="background-color: white">
           <br>
@@ -17,11 +18,10 @@
         <div>
           <%= image_tag "#{@job.photo}", height: 300, crop: :fill %>
         </div>
-        </div>
-      </div>
     </div>
-    <div class="col-xs-6">
+    <div class="col-xs-6 margin_bottom">
       <%= render 'bookings/bookingform', job: @job, booking: @booking %>
     </div>
   </div>
+</div>
 
