--- a/app/views/bookings/_bookingform.html.erb
+++ b/app/views/bookings/_bookingform.html.erb
@@ -1,5 +1,5 @@
 <%= simple_form_for([job, booking]) do |f| %>
 <%= f.input :date%>
-<%= f.input :message %>
+<%= f.input :message, class: "message" %>
 <%= f.button :submit, class: "btn btn-primary" %>
 <% end %>
