--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -14,4 +14,7 @@
       <%= @booking.date %>
     </p>
   </div>
+    <div class="blue_font">
+    <%= link_to "View other job listings", jobs_path %>
+  </div>
 </div>
