--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -23,5 +23,8 @@
       <%= render 'bookings/bookingform', job: @job, booking: @booking %>
     </div>
   </div>
+  <div class= "backlink">
+    <%= link_to "View other job listings", jobs_path, class: "blue_font" %>
+  </div>
 </div>
 
