Add dotenv - Protect my secret data in .env file

--- a/app/views/jobs/new.html.erb
+++ b/app/views/jobs/new.html.erb
@@ -1,2 +1,4 @@
-<h1>Jobs#new</h1>
-<p>Find me in app/views/jobs/new.html.erb</p>
+<div class="overall_container">
+  <h1>Lend Help</h1>
+  <%= render 'form', job: @job %>
+</div>
