changed color and size of signin/out buttons

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -66,7 +66,11 @@
   background: transparent !important;
   color: black !important;
 }
-
+.log-in-out{
+  font-size: 14px;
+  font-weight: bold;
+  color: #616668;
+}
 .navbar-wagon-dropdown-menu:before {
   content: ' ';
   height: 10px;
