--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -11,9 +11,9 @@
   <div class="navbar-wagon-right hidden-xs hidden-sm">
     <a href="" class="navbar-wagon-item navbar-wagon-link">  </a>
     <% if user_signed_in? %>
-    <%= link_to "Sign out", destroy_user_session_path, :method => :delete %>
+    <%= link_to "Sign out", destroy_user_session_path, :method => :delete, class: "log-in-out" %>
     <% else %>
-    <%= link_to "Sign in", new_user_session_path %>
+    <%= link_to "Sign in", new_user_session_path, class: "log-in-out" %>
     <% end %>
     <!-- Profile photo with dropdown list -->
     <div class="navbar-wagon-item">
