created jobs new page

--- a/app/views/jobs/_form.html.erb
+++ b/app/views/jobs/_form.html.erb
@@ -1,4 +1,4 @@
-<div class="overall_container">
+<div class="overall_container overall-form">
 
   <div class="form">
     <%= simple_form_for(@job) do |f| %>
@@ -33,11 +33,12 @@
       </div>
 
       <div class="group">
-        <%= f.association :user %>
+        <%= f.association :category %>
       </div>
 
       <div class="group">
-        <%= f.association :category %>
+        <%= f.input :photo %>
+        <%= f.input :photo_cache, as: :hidden %>
       </div>
 
       <%= f.submit "Create Help", class: "btn btn-primary" %>
