--- a/app/views/jobs/new.html.erb
+++ b/app/views/jobs/new.html.erb
@@ -1,4 +1,4 @@
 <div class="overall_container">
-  <h1>Lend Help</h1>
+  <h3 class="text-center large_topmargin">Lend Help</h3>
   <%= render 'form', job: @job %>
 </div>
