made further changes to seed and new form

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -5,7 +5,7 @@
       <%= image_tag("proletar.png")  %>
   </a>
     <strong><%= link_to "Find Help", jobs_path, class: "navbar-wagon-item navbar-wagon-link" %></strong>
-    <a href="" class="navbar-wagon-item navbar-wagon-link"><strong>Lend Help</strong></a>
+    <strong><%= link_to "Lend Help", new_job_path, class: "navbar-wagon-item navbar-wagon-link" %></strong>
   </div>
   <!-- Right Navigation -->
   <div class="navbar-wagon-right hidden-xs hidden-sm">
