added booking policy

--- a/app/views/jobs/_form.html.erb
+++ b/app/views/jobs/_form.html.erb
@@ -13,7 +13,7 @@
       <% end %>
 
       <div class="group">
-        <%= f.label :help_name %>
+        <%= f.label :job_name %>
         <%= f.text_field :name %>
       </div>
 
