--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -70,6 +70,7 @@
   font-size: 14px;
   font-weight: bold;
   color: #616668;
+  padding: 0 20px;
 }
 .navbar-wagon-dropdown-menu:before {
   content: ' ';
