did more updates

--- a/app/assets/stylesheets/layouts/overall_style.scss
+++ b/app/assets/stylesheets/layouts/overall_style.scss
@@ -43,9 +43,18 @@
 
 .margin_bottom {
   margin-bottom: 50px;
-  padding-left: 60px;
+  padding-left: 50px;
 }
 
 .blue_font {
   color: #2064f3;
+}
+
+.margin_left {
+  margin-bottom: 50px;
+  margin-left: 35px;
+}
+
+.backlink {
+  font-size: 15px;
 }
