--- a/app/assets/stylesheets/components/_bookingform.scss
+++ b/app/assets/stylesheets/components/_bookingform.scss
@@ -1,23 +1,28 @@
 .booking_form_group {
-  font-family: "Raleway", "Helvetica", "sans-serif";
-  padding: 20px;
+  font-family: "Lato", "sans-serif";
+  font-size: 15px;
   width: 650px;
   justify-content: space-around;
   align-items: center;
-  background-color: #f5f5f5;
 
   .booking_form_input {
     padding: 30px;
     padding-left: 10px;
   }
-}
 
-#new_booking {
-  margin-left: 30px;
-  font-size: 14px;
-  .mx-1 {
-    display: inline-block;
-    width: 150px;
-    font-size: 14px;
+  .btn {
+    font-size: 15px;
   }
 }
+
+.mx-1 {
+  font-size: 14px;
+  display: inline-flex;
+  width: 170px;
+  font-size: 14px;
+}
+
+#booking_message {
+  width: 80%;
+}
+
