--- a/app/assets/stylesheets/components/_searchform.scss
+++ b/app/assets/stylesheets/components/_searchform.scss
@@ -2,10 +2,11 @@
   font-family: "Lato", "sans-serif";
   padding: 20px;
   display: flex;
-  width: 450px;
-  justify-content: space-around;
+  width: 600px;
+  justify-content: space-between;
   align-items: center;
   background-color: #f5f5f5;
+
   .form_input {
     padding-left: 10px;
   }
