--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -72,6 +72,11 @@
   color: #616668;
   padding: 0 20px;
 }
+
+.log-in-out:hover{
+  color: #185ff7;
+  text-decoration: none;
+}
 .navbar-wagon-dropdown-menu:before {
   content: ' ';
   height: 10px;
