--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -25,7 +25,9 @@
           <% if policy(@job).edit? %>
           <%= link_to "Edit", edit_job_path(@job), class: "btn btn-primary" %>
           <% else %>
-          <%= render 'bookings/bookingform', job: @job, booking: @booking  %>
+          <div class="booking_form_group">
+            <%= render 'bookings/bookingform', job: @job, booking: @booking  %>
+          </div>
           <% end %>
           <% if policy(@job).destroy? %>
           <%= link_to "Delete", job_path(@job), class: "btn btn-primary", method: :delete,
