--- a/app/assets/stylesheets/components/_tab.scss
+++ b/app/assets/stylesheets/components/_tab.scss
@@ -1,10 +1,11 @@
 .tabs {
-  background: #dddbdb;
+  background: #5A64F3;
   display: flex;
   padding: 30px 10px 0 40px
 }
 .tabs a {
-  color: white;
+  color: #565656;
+  font-weight: lighter;
 }
 .tabs a:hover {
   cursor: pointer;
@@ -21,7 +22,7 @@
   margin-bottom: 0;
 }
 .tab {
-  background: #5A64F3;
+  background: #dddbdb;
   flex: 0 0 25%;
   text-align: center;
   padding: 17px 0;
