--- a/app/views/jobs/_form.html.erb
+++ b/app/views/jobs/_form.html.erb
@@ -12,30 +12,30 @@
       </ul>
     </div>
     <% end %>
-    <div class="group">
+    <div class="job_group">
       <%= f.label :job_name %>
       <%= f.text_field :name %>
     </div>
-    <div class="group">
+    <div class="job_group">
       <%= f.label :description %>
       <%= f.text_field :description %>
     </div>
-    <div class="group">
+    <div class="job_group">
       <%= f.label :location %>
       <%= f.text_field :location %>
     </div>
-    <div class="group">
+    <div class="job_group">
       <%= f.label :price %>
       <%= f.text_field :price %>
     </div>
-    <div class="group">
+    <div class="job_group">
       <%= f.association :category %>
     </div>
-    <div class="group">
+    <div class="job_group">
       <%= f.input :photo %>
       <%= f.input :photo_cache, as: :hidden %>
     </div>
-    <%= f.submit "Create Job", class: "btn btn-primary" %>
+    <%= f.submit "Create Job", class: "btn btn-primary job_button" %>
     <% end %>
   </div>
 </div>
