--- a/app/views/pages/dashboardbookings.html.erb
+++ b/app/views/pages/dashboardbookings.html.erb
@@ -19,7 +19,7 @@
               <i class="fas fa-edit"></i>
             <% end %>
              |
-            <%= link_to booking_path(booking), method: :delete, data: { confirm: "Are you sure?" } do %>
+            <%= link_to job_booking_path(booking.job, booking), method: :delete, data: { confirm: "Are you sure?" } do %>
               <i class="fas fa-trash-alt"></i></p>
             <% end %>
         </div>
