did review user story

--- a/app/assets/stylesheets/layouts/overall_style.scss
+++ b/app/assets/stylesheets/layouts/overall_style.scss
@@ -62,3 +62,15 @@
 a {
   text-decoration: none;
 }
+
+.small_button {
+  background-color: #2069F3;
+  border: none;
+  border-radius: 3px;
+  margin-top: 5px;
+  a {
+    color: white;
+    text-decoration: none;
+  }
+}
+
