--- a/app/assets/stylesheets/pages/_jobs.scss
+++ b/app/assets/stylesheets/pages/_jobs.scss
@@ -66,3 +66,17 @@
   text-decoration: none;
 
 }
+
+.review_box {
+  background-color: #f5f5f5;
+  padding: 10px;
+  margin-left: 15px;
+  width: 37.5vw;
+  min-height: 194px;
+  h5 {
+    font-size: 16px;
+  }
+  p {
+    font-size: 14px;
+  }
+}
